# Tissue_division_of_labor

./: .gitignore  README  README.md  all_interactions.py  interactions.py  pathways_analysis.py
02_Archetype_Identification/: donors_analysis.m
03_Tissue_Composition/: 03_Tissue_composition.ipynb  pmax_sensitivity.ipynb  tissue_fraction_gini_grid.ipynb
04_Intercellular_Crosstalk/: README.md  all_interactions_update_presentation.py
04_Intercellular_Crosstalk/__marimo__/session/: all_interactions.py.json  pathways_analysis.py.json
04_Intercellular_Crosstalk/code/: archetype_enrichment_preproccess.py
04_Intercellular_Crosstalk/src/lr_archetype/: triangle.py
06_Archetype_Robustness/: PCA_polytopes.R
07_Cross_Species_Analysis/: mouse_fibroblast_pipeline.ipynb
code/02_Archetype_Identification/: run_parTI.m
code/03_Tissue_Composition/: plot_arc_weights_in_tsne.m
code/04_Intercellular_Crosstalk/: all_interactions.py  pathways_analysis.py  pyproject.toml
code/04_Intercellular_Crosstalk/code/: lr_archetype_interactions.py  tissue_correlation.py
code/04_Intercellular_Crosstalk/src/lr_archetype/: interactions.py  triangle.py
code/05_spatial_ligand_receptor/: ligand_receptor.py
code/06_Archetype_Robustness/: fig_6_heatmaps.R
code/07_Cross_Species_Analysis/: 07_Tissue_composition_mice.ipynb  human_mouse_cmp.m  tissue_fraction_gini_grid_mice.ipynb
