[project]
name = "lr_archetype"
version = "0.1.0"
description = "Scientific computing and data analysis for ligand-receptor archetype interactions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "gseapy>=1.1.9",
    "marimo[lsp]>=0.14.16",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openai>=1.90.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "scanpy>=1.11.1",
    "seaborn>=0.13.2",
    "pytest>=8.3.3", # For testing
    "jupyterlab>=4.2.5", # Optional: for Jupyter compatibility
    "lr_archetype>=0.1.0",
    "bioservices>=1.12.1",
    "gprofiler-official>=1.0.0",
    "goatools>=1.4.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lr_archetype"]


[tool.uv]
dev-dependencies = [
    "black>=24.8.0",  # Code formatting
    "ruff>=0.6.8",    # Linting
    "mypy>=1.11.2",   # Type checking
]

[tool.marimo.experimental]
lsp = true
